# rust-on-bare-metal-raspi3-samples

./: .gdb_history  .gitignore  Cargo.toml  Makefile
.cargo/: config
armv8_boot/: Cargo.toml
raspi3_boot/src/: boot_cores.S  lib.rs
raspi_bsp/: Cargo.toml
raspi_bsp/src/: lib.rs
src/: arm_debug.rs  arm_timer.rs  dmac.rs  exception.rs  gpio.rs  int_device.rs  interrupt.rs  interrupt_gic.rs  interrupt_legacy.rs  main.rs  mbox.rs  optional_cell.rs  singleton.rs  timer.rs  uart.rs  utils.rs
