[package]
name = "kernel8"
version = "0.1.0"
authors = ["Andre Richter <andre.o.richter@gmail.com>"]
edition = "2018"

[dependencies]
raspi3_boot = { path = "raspi3_boot" }
nt_allocator = { git = "https://github.com/naotaco/nt-global-alloc-rs.git" }
register = "0.4.0"
cortex-a = { version = "2.8.x"}
static_assertions = "0.3.3"
arr_macro= { version = "0.1.3"}

[package.metadata.cargo-xbuild]
sysroot_path = "../xbuild_sysroot"

