[package]
name = "kernel8"
version = "0.1.0"
authors = ["Andre Richter <andre.o.richter@gmail.com>"]
edition = "2018"

[dependencies]
raspi3_boot = { path = "raspi3_boot" }
nt_allocator = { git = "https://github.com/naotaco/nt-global-alloc-rs.git" }
register = "0.5.x"
cortex-a = { version = "3.0.x"}
static_assertions = "1.1.x"

[package.metadata.cargo-xbuild]
sysroot_path = "../xbuild_sysroot"

